# licensepp

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: run-tests.yml
cli/: .gitignore  Makefile  README.md  main.cc  sample.license
cli/licensing/: README.md  license-manager-key-register.cc  license-manager-key-register.h  license-manager.h
cmake/: FindCryptoPP.cmake  FindRipe.cmake  Findgtest.cmake  config.h.cmake
doxygen/: README_DOXYGEN.md  conf  customdoxygen.css
include/license++/: license.h
license++/: base-license-manager.h  c-bindings.h  issuing-authority.h  license-c-bindings.h  license-exception.h  license.h
sample/: .gitignore  Makefile  README.md  license-manager.h  main.cc  sample-with-signature.licensepp  sample.licensepp
src/: c-bindings.cc  issuing-authority.cc  json-object.cc  json-object.h  license-c-bindings.cc  license.cc  utils.cc  utils.h
src/crypto/: aes.cc  aes.h  base16.cc  base16.h  base64.cc  base64.h  rsa.cc  rsa.h  zlib.cc  zlib.h
test/: license-manager-for-test.h  license-manager-test.h  main.cc  test.h  testx.h
